[tool.poetry]
name = "nonebot-plugin-imagemaster"
version = "1.0.6"
description = "提供多种图像处理功能的bot插件"
authors = ["phquathi <yangziqi233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0"
opencv-python = "^4.0.0"
httpx = "^0.24.0"
numpy = "^1.0.0"
Pillow = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
